# steamscope

./: .env.example  .gitignore  AGENTS.md  LICENSE  PLANNING.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
application/: context.py  context_smoke_test.py  db.py  gemini-advisor.py  gemini_advisor.py  redis_client.py  scheduler.py  scraper.py  test_context.py
aprendizado/: 01-visao-geral.md  02-como-rodar.md  03-scraper-explicado.md  04-banco-e-agendador.md  05-como-pensar-como-dev.md  06-proximas-fases-passo-a-passo.md  README.md  paginacao.md
tests/: test_api_validation.py  test_db.py  test_gemini_advisor.py  test_redis_client.py
web/: app.py
web/static/: script.js
web/templates/: index.html  script.js
