[project]
name = "steamscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "jinja2>=3.1.6",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "requests>=2.33.0",
    "schedule>=1.2.2",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

# Check for outdated dependencies, bug patterns, etc
[tool.ruff.lint]
select = ["E", "F", "I", "B"]
